--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,19 @@ id_ed25519
 id_rsa.pub
 id_ed25519.pub
 
-# Config files
+# Docker
+*.pid
+*.sock
+
+# Logs
+logs/
+*.log
+
+# Config (don't commit secrets)
 application.yml
 application.yaml
-docker-compose.override.yml
+!application-example.yml
+
+# Frontend (if any)
+node_modules/
+dist/
