--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,31 @@
+version: "3.8"
+
 services:
   postgres:
     image: postgres:13
-    environment:
-      POSTGRES_DB: securedb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+    restart: always
     ports:
       - "5432:5432"
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
   app:
-    build: .
+    image: secure-springboot-microservice-app
+    build:
+      context: .
     ports:
       - "8080:8080"
+    environment:
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      JWT_SECRET: ${JWT_SECRET}
     depends_on:
       - postgres
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/securedb
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
+
+volumes:
+  pgdata:
