--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-# Server port
+# application.properties
+
+# Server
 server.port=8080
 
-  # Datasource settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/securedb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# Datasource
+spring.datasource.url=jdbc:postgresql://postgres:5432/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-  # JPA / Hibernate
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-  # JWT secret
-jwt.secret=mySecretKey
+# JWT
+jwt.secret=${JWT_SECRET}
