added rate limit filter and config

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
       <version>1.6.14</version>
     </dependency>
 
+    <!-- Bucket4j to throttle requests by IP -->
+    <dependency>
+      <groupId>com.github.vladimir-bukhtoyarov</groupId>
+      <artifactId>bucket4j-core</artifactId>
+      <version>7.6.0</version>
+    </dependency>
+
     <!-- JUnit for testing -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
