--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,12 @@ jwt.secret=${JWT_SECRET}
 
 rate.limit.capacity=3
 rate.limit.durationMinutes=1
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=paumicsul@gmail.com
+spring.mail.password=tmdo tlqy cvko apuv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+
