--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       - kafka
     ports:
       - "8080:8080"
+    env_file: .env
     environment:
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -52,7 +53,7 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       SPRING_KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       EMAIL_USERNAME: ${EMAIL_USERNAME}
-      EMAIL_PASSWORD: ${EMAIL_PASSWORD}
+      EMAIL_PASSWORD: ${SMTP_CREDS}
 
   notificationms:
     build:
@@ -62,10 +63,11 @@ services:
       - kafka
     ports:
       - "8081:8081"
+    env_file: .env
     environment:
       SPRING_KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       EMAIL_USERNAME: ${EMAIL_USERNAME}
-      EMAIL_PASSWORD: ${EMAIL_PASSWORD}
+      EMAIL_PASSWORD: ${SMTP_CREDS}
 
 volumes:
   pgdata:
